<resources>
    <string name="app_name">Folderlogs</string>
    <string name="folders">Folders</string>
    <string name="add_folder">add folder</string>
    <string name="added">added</string>
    <string name="folder_uri">Folder uri</string>
    <string name="remove_folder">remove folder</string>
    <string name="logs">Logs</string>
    <string name="configuration">Configuration</string>
    <string name="theme_configuration">Theme configuration</string>
    <string name="auto_scan">Auto background scan</string>
    <string name="every_minutes">Approx every (minutes)</string>
    <string name="about">About</string>
    <string name="search">Search</string>
    <string name="manual_scan">scan now</string>
    <string name="scanning">Scanning</string>
    <string name="detected_changes">Detected changes</string>
    <string name="detected_new_change">Detected new change</string>
    <string name="no_change_at">No change at</string>
    <string name="error">Error</string>
    <string name="service_error">service error</string>
    <string name="delete_logs">delete logs</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes_delete_logs">Yes, delete logs</string>
    <string name="yes_remove_folder">Yes, remove folder</string>
    <string name="no_dont_delete_logs">No, don\&apos;t delete logs</string>
    <string name="no_dont_remove_folder">No, don\&apos;t remove folder</string>
    <string name="deleted">Deleted.</string>
    <string name="removed">Removed.</string>
    <string name="new_change">New change</string>
    <string name="new_change_notification">New change notification</string>
    <string name="no_change">No change</string>
    <string name="no_change_notification">Notification for 0 change</string>
    <string name="Service_error">Service error</string>
    <string name="Service_error_notification">Service error notification</string>
    <string name="scan_process">Scan process</string>
    <string name="scan_process_in_background">Scan process in background</string>
    <string name="file">File</string>
    <string name="folder">Folder</string>
    <string name="size">Size</string>
    <string name="bytes">bytes</string>
    <string name="date">Date</string>
    <string name="Close">Close</string>
    <string name="copy_hash">Copy hash</string>
    <string name="select_hash">Select hash</string>
    <string name="select_sha">Select SHA</string>
    <string name="more">More</string>
    <string name="md5">MD5</string>
    <string name="sha">SHA-?</string>
    <string name="sha1">SHA-1</string>
    <string name="sha256">SHA-256</string>
    <string name="sha512">SHA-512</string>
    <string name="copied">Copied.</string>
    <string name="New">[New!]</string>
    <string name="Modified">[Modified]</string>
    <string name="Deleted">[Deleted]</string>
    <string name="ERROR">[ACCESS ERROR!]</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="debug">Debug</string>
    <string name="log_start_time_stamp">Log start time-stamp</string>
    <string name="loading">Loading</string>
    <string name="this_program_is_free_software">
    This program is free software: you can redistribute it and/or modify
    it under the terms of the GNU General Public License as published by
    the Free Software Foundation, either version 3 of the License, or
    (at your option) any later version.

    This program is distributed in the hope that it will be useful,
    but WITHOUT ANY WARRANTY; without even the implied warranty of
    MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
    GNU General Public License for more details.
    </string>

</resources>